Bug 402644 - libkexiv2 build fail with exiv2-0.27
Summary: libkexiv2 build fail with exiv2-0.27
Status: RESOLVED FIXED
Alias: None
Product: libkexiv2
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: imaging-bugs-null
URL: https://phabricator.kde.org/D17799
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-28 12:08 UTC by Treeve Jelbert
Modified: 2018-12-30 15:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
compile log (2.89 KB, application/x-bzip)
2018-12-28 12:08 UTC, Treeve Jelbert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Treeve Jelbert 2018-12-28 12:08:00 UTC
Created attachment 117146 [details]
compile log

libkexiv2  18.12.0 build fails
Comment 1 Andreas Sturmlechner 2018-12-30 15:39:08 UTC
Git commit d1be9298c7f2b9c717cda154d41732f230ea13a6 by Andreas Sturmlechner.
Committed on 30/12/2018 at 15:39.
Pushed by asturmlechner into branch 'master'.

Fix building against exiv2-0.27

Summary:
Copied FindLibExiv2.cmake from ECM 5.53.0 until we raise min version.

Upstream advises to include single exiv2/exiv2.hpp over separate headers
that are in the process of being refactored.

Test Plan: Tested build with exiv2-0.26 and 0.27

Reviewers: #kde_applications, cgilles, aacid, bruns

Reviewed By: bruns

Subscribers: ngraham, bruns, heikobecker

Differential Revision: https://phabricator.kde.org/D17799

M  +10   -22   CMakeLists.txt
D  +0    -80   cmake/modules/FindExiv2.cmake
A  +115  -0    cmake/modules/FindLibExiv2.cmake
M  +1    -1    cmake/templates/libkexiv2.pc.cmake.in
M  +1    -2    src/CMakeLists.txt
M  +1    -1    src/kexiv2.cpp
M  +4    -13   src/kexiv2_p.cpp
M  +1    -22   src/kexiv2_p.h
M  +4    -0    src/kexiv2exif.cpp

https://commits.kde.org/libkexiv2/d1be9298c7f2b9c717cda154d41732f230ea13a6