Fix building against exiv2-0.27

Summary:
Copied FindLibExiv2.cmake from ECM 5.53.0 until we raise min version.

Upstream advises to include single exiv2/exiv2.hpp over separate headers
that are in the process of being refactored.

BUG: 402644

Test Plan: Tested build with exiv2-0.26 and 0.27

Reviewers: #kde_applications, cgilles, aacid, bruns

Reviewed By: bruns

Subscribers: ngraham, bruns, heikobecker

Differential Revision: https://phabricator.kde.org/D17799